Media query 425px para video y parrafo

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <video class="section__video" src="./img/video.mp4" controls>VIDEO PRESENTACION</video>
 
         <div class="section__div">
-            <h1>Presentacion de la marca</h1>
+            <!-- <h1>Presentacion de la marca</h1> -->
 
             <p class="section__divparrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo dicta, vero ipsa nesciunt laborum quis quibusdam necessitatibus vitae amet id blanditiis animi eos? Ex in doloremque, autem labore perspiciatis fugiat omnis libero et recusandae repellat neque, modi minima iusto dignissimos tenetur! Quisquam recusandae est animi maxime earum iure! Ab, sunt! Minus architecto id magnam cum eos qui natus, distinctio blanditiis?</p>
 
