Media query 425px del footer

--- a/index.html
+++ b/index.html
@@ -96,9 +96,14 @@
             <img class="footer__logo" src = "./img/LogoWeb.png" alt = "LOGO DE LA EMPRESA">
         </a>
 
-        <p>Buenos Aires, Argentina</p>
+        <div class="footer__div">
+            <p>Buenos Aires, Argentina</p>
+        </div>
 
-        <p>email@decontacto.com</p>
+        <div class="footer__div">
+            <p>email@decontacto.com</p>
+        </div>
+        
 
         <div class="footer__div">
             <a href="https://www.instagram.com/skinpassion.arg/">
