--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> <!-- Etiqueta cerrada -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <meta charset="UTF-8"> <!-- Etiqueta abierta -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,7 +45,7 @@
 
     <main class="main">
         
-        <div class="main__div">
+        <div class="main__div" data-aos="zoom-in">
             <a href="./vistas/servicio.html">
                 <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL">
             </a>
@@ -51,7 +53,7 @@
             <p class="main__divsubtitulo">Diagnostico de piel</p>
         </div>
 
-        <div class="main__div">
+        <div class="main__div" data-aos="zoom-in">
             <a href="./vistas/servicio.html">
                 <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL">
             </a>
@@ -59,7 +61,7 @@
             <p class="main__divsubtitulo">Diagnostico de piel</p>
         </div>
 
-        <div class="main__div">
+        <div class="main__div" data-aos="zoom-in">
             <a href="./vistas/servicio.html">
                 <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL">
             </a>
@@ -67,7 +69,7 @@
             <p class="main__divsubtitulo">Diagnostico de piel</p>
         </div>
 
-        <div class="main__div">
+        <div class="main__div" data-aos="zoom-in">
             <a href="./vistas/servicio.html">
                 <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL">
             </a>
@@ -117,5 +119,10 @@
         </div>
     
     </footer>
+
+    <script>
+        AOS.init();
+      </script>
+
 </body>
 </html>
