Media query 768 para el INDEX

--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
 
             <p class="section__divparrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo dicta, vero ipsa nesciunt laborum quis quibusdam necessitatibus vitae amet id blanditiis animi eos? Ex in doloremque, autem labore perspiciatis fugiat omnis libero et recusandae repellat neque, modi minima iusto dignissimos tenetur! Quisquam recusandae est animi maxime earum iure! Ab, sunt! Minus architecto id magnam cum eos qui natus, distinctio blanditiis?</p>
 
+        </div>
+
+        <div class="section__div">
             <img src="./img/BannerMarcas.JPG" alt="MARCAS QUE TRABAJAMOS">
+
         </div>
         
      </section>
