--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
 
         <div class="section__div">
-            <img src="./img/BannerMarcas.JPG" alt="MARCAS QUE TRABAJAMOS">
+            <img class="section__banner" src="./img/BannerMarcas.JPG" alt="MARCAS QUE TRABAJAMOS">
 
         </div>
         
