--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL">
             </a>
 
-            <p class="main__divsubtitulo">Diagnostico de piel</p>
+            <!-- <p class="main__divsubtitulo">Diagnostico de piel</p> -->
         </div>
 
         <div class="main__div" data-aos="zoom-in">
@@ -58,7 +58,7 @@
                 <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL">
             </a>
 
-            <p class="main__divsubtitulo">Diagnostico de piel</p>
+            <!-- <p class="main__divsubtitulo">Diagnostico de piel</p> -->
         </div>
 
         <div class="main__div" data-aos="zoom-in">
@@ -66,7 +66,7 @@
                 <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL">
             </a>
 
-            <p class="main__divsubtitulo">Diagnostico de piel</p>
+            <!-- <p class="main__divsubtitulo">Diagnostico de piel</p> -->
         </div>
 
         <div class="main__div" data-aos="zoom-in">
@@ -74,7 +74,7 @@
                 <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL">
             </a>
 
-            <p class="main__divsubtitulo">Diagnostico de piel</p>
+            <!-- <p class="main__divsubtitulo">Diagnostico de piel</p> -->
         </div>
 
     </main>
