Se hacen ajustes varios + se intenta acomodar el video con grid. No pude hacer que ocupen el espacio que queria

--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
     </main>
 
     <section class="section">
-        <video class="section__video" src="./img/video.mp4" controls>VIDEO PRESENTACION</video>
+        <video id="video" class="section__video" src="./img/video.mp4" controls>VIDEO PRESENTACION</video>
 
         <div class="section__div">
             <!-- <h1>Presentacion de la marca</h1> -->
 
-            <p class="section__divparrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo dicta, vero ipsa nesciunt laborum quis quibusdam necessitatibus vitae amet id blanditiis animi eos? Ex in doloremque, autem labore perspiciatis fugiat omnis libero et recusandae repellat neque, modi minima iusto dignissimos tenetur! Quisquam recusandae est animi maxime earum iure! Ab, sunt! Minus architecto id magnam cum eos qui natus, distinctio blanditiis?</p>
+            <p id="parrafo" class="section__divparrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo dicta, vero ipsa nesciunt laborum quis quibusdam necessitatibus vitae a</p>
 
         </div>
 
         <div class="section__div">
-            <img class="section__banner" src="./img/BannerMarcas.JPG" alt="MARCAS QUE TRABAJAMOS">
+            <img id="banner" class="section__banner" src="./img/agregar.png" alt="MARCAS QUE TRABAJAMOS">
 
-        </div>
+        <!-- </div> -->
         
      </section>
 
