--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
        </nav>
     </header>
 
-    <div class="container-fluid">
+    <div class="div container-fluid">
         <div id="carouselExampleCaptions" class="carousel slide">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
