--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
                 <ul class="navbar-nav">
 
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="./index.html"><strong>INICIO</strong></a>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="./vistas/servicio.html">Servicios</a>
+                    <a class="nav-link" href="./vistas/servicio.html"><strong>SERVICIOS</strong></a>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="./vistas/productos.html">Productos</a>
+                    <a class="nav-link" href="./vistas/productos.html"><strong>PRODUCTOS</strong></a>
                   </li>
             
                   <li class="nav-item">
-                    <a class="nav-link" href="./vistas/equipo.html">Equipo</a>
+                    <a class="nav-link" href="./vistas/equipo.html"><strong>EQUIPO</strong></a>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="./vistas/contacto.html">Contacto</a>
+                    <a class="nav-link" href="./vistas/contacto.html"><strong>CONTACTO</strong></a>
                   </li>
 
                 </ul>
