Se arreglan todas las demas vistas

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8"> <!-- Etiqueta abierta -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INDEX</title>
+    <title>Skin Passion</title>
 
     <!-- ESCRIBO EL LINK CSS-->
 
@@ -16,7 +16,6 @@
 </head> 
 <body>
     <header >
-       
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="./index.html">
