Se agrega en el index la llamada al compilado.css con exito

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- ESCRIBO EL LINK CSS-->
 
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./css/compilado.css">
 
 </head> 
 <body>
