--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -12,7 +12,7 @@
 
     <!-- ESCRIBO EL LINK CSS-->
 
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/compilado.css">
 
 </head> 
 <body>
