--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -13,7 +13,7 @@
 
     <!-- ESCRIBO EL LINK CSS-->
 
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/compilado.css">
 
 </head> 
 <body>
