--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     </header>
 
-    <div class="div container-fluid">
+    <div class=" container-fluid">
         <div id="carouselExampleCaptions" class="carousel slide">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -95,7 +95,6 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-        <!-- <img class="div__img" src="./img/PortadaWeb1.jpg" alt="CARRUSEL"> -->
     </div>
 
     <main class="main">
@@ -104,41 +103,31 @@
             <a href="./vistas/servicio.html">
                 <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL">
             </a>
-
-            <!-- <p class="main__divsubtitulo">Diagnostico de piel</p> -->
         </div>
 
         <div class="main__div" data-aos="zoom-in">
             <a href="./vistas/servicio.html">
                 <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL">
             </a>
-
-            <!-- <p class="main__divsubtitulo">Diagnostico de piel</p> -->
         </div>
 
         <div class="main__div" data-aos="zoom-in">
             <a href="./vistas/servicio.html">
                 <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL">
             </a>
-
-            <!-- <p class="main__divsubtitulo">Diagnostico de piel</p> -->
         </div>
 
         <div class="main__div" data-aos="zoom-in">
             <a href="./vistas/servicio.html">
                 <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL">
             </a>
-
-            <!-- <p class="main__divsubtitulo">Diagnostico de piel</p> -->
         </div>
-
     </main>
 
     <section class="section">
         <video id="video" class="section__video" src="./img/video.mp4" controls>VIDEO PRESENTACION</video>
 
         <div class="section__div">
-            <!-- <h1>Presentacion de la marca</h1> -->
 
             <p id="parrafo" class="section__divparrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo dicta, vero ipsa nesciunt laborum quis quibusdam necessitatibus vitae a</p>
 
@@ -146,9 +135,7 @@
 
         <div class="section__div">
             <img id="banner" class="section__banner" src="./img/agregar.png" alt="MARCAS QUE TRABAJAMOS">
-
-        <!-- </div> -->
-        
+        </div>
      </section>
 
     
