--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <meta name="description" content="Palabras claves">
+    <meta name="description" content="Asesoramiento personalizado - Tratamientos de belleza - Rutinas SkinCare">
     <meta name="keywords" content="COSMETOLOGIA, BELLEZA, SKINCARE, TIPS, PIEL, RADIOFRECUENCIA, LACA, RUTINA, FACIAL">
     <meta charset="UTF-8"> <!-- Etiqueta abierta -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
