Se linkean nuevamente corrigiendo las rutas

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="./vistas/servicio.html"><strong>SERVICIOS</strong></a>
+                    <a class="nav-link" href="./belleza/servicio.html"><strong>SERVICIOS</strong></a>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="./vistas/productos.html"><strong>PRODUCTOS</strong></a>
+                    <a class="nav-link" href="./belleza/productos.html"><strong>PRODUCTOS</strong></a>
                   </li>
             
                   <li class="nav-item">
-                    <a class="nav-link" href="./vistas/equipo.html"><strong>EQUIPO</strong></a>
+                    <a class="nav-link" href="./belleza/equipo.html"><strong>EQUIPO</strong></a>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="./vistas/contacto.html"><strong>CONTACTO</strong></a>
+                    <a class="nav-link" href="./belleza/contacto.html"><strong>CONTACTO</strong></a>
                   </li>
 
                 </ul>
