--- a/belleza/productos.html
+++ b/belleza/productos.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Skin Passion - Servicio</title>
+    <title>SKIN PASSION - Productos</title>
 
     <!-- ESCRIBO EL LINK CSS-->
 
