--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8"> <!-- Etiqueta abierta -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skin Passion - Argentina</title>
+    <title>SKIN PASSION - Argentina</title>
 
     <!-- ESCRIBO EL LINK CSS-->
 
