--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <meta name="description" content="Asesoramiento personalizado - Tratamientos de belleza - Rutinas SkinCare">
-    <meta name="keywords" content="COSMETOLOGIA, BELLEZA, SKINCARE, TIPS, PIEL, RADIOFRECUENCIA, LACA, RUTINA, FACIAL">
+    <meta name="keywords" content="COSMETOLOGA, BELLEZA, SKINCARE, TIPS, PIEL, RADIOFRECUENCIA, LACA, RUTINA, FACIAL, COSMIATRA">
     <meta charset="UTF-8"> <!-- Etiqueta abierta -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -70,32 +70,32 @@
               <div class="carousel-item active">
                 <img src="./img/PortadaWeb1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5>Productos de calidad</h5>
+                  <p>Todos nuestros insumos son de grandes laboratorios como LACA & EXEL.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./img/PortadaWeb3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5>Conocimiento certificado</h5>
+                  <p>Soy cosmetologa y cosmiatra con mas de 5 años con experiencia en el cuidado de la piel</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./img/PortadaWeb1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>Aparatologia de primer nivel</h5>
+                  <p>Tus tratamientos acompañados de las mejores marcas</p>
                 </div>
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+              <span class="visually-hidden">Anterior</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+              <span class="visually-hidden">Siguiente</span>
             </button>
           </div>
     </div>
@@ -132,7 +132,7 @@
 
         <div class="section__div">
 
-            <p id="parrafo" class="section__divparrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo dicta, vero ipsa nesciunt laborum quis quibusdam necessitatibus vitae a</p>
+            <p id="parrafo" class="section__divparrafo">Mas de 5 años acompañando el cuidado y belleza de la piel. Te ayudo a que puedas generas rutinas sanas con las cuales veras resultados en un corto a mediano plazo. La asesoria es personalizada, lo que nos permite tener un seguimiento mas adecuado y cercano a tus necesidades. Las marcas con las que trabajo estan abaladas a nivel mundial, son de primera calidad como lo que tu piel merece.</p>
 
         </div>
 
