Se agregan otras keywords

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <meta name="description" content="Asesoramiento personalizado - Tratamientos de belleza - Rutinas SkinCare">
-    <meta name="keywords" content="COSMETOLOGA, BELLEZA, SKINCARE, TIPS, PIEL, RADIOFRECUENCIA, LACA, RUTINA, FACIAL, COSMIATRA">
+    <meta name="keywords" content="COSMETOLOGA, BELLEZA, PIEL, LACA, EXEL, RUTINA, CUIDADO, CALIDAD, MUNDIAL, MARCAS, COSMIATRA">
     <meta charset="UTF-8"> <!-- Etiqueta abierta -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -132,7 +132,7 @@
 
         <div class="section__div">
 
-            <p id="parrafo" class="section__divparrafo">Mas de 5 años acompañando el cuidado y belleza de la piel. Te ayudo a que puedas generas rutinas sanas con las cuales veras resultados en un corto a mediano plazo. La asesoria es personalizada, lo que nos permite tener un seguimiento mas adecuado y cercano a tus necesidades. Las marcas con las que trabajo estan abaladas a nivel mundial, son de primera calidad como lo que tu piel merece.</p>
+            <p id="parrafo" class="section__divparrafo">Mas de 5 años acompañando el cuidado y belleza de la piel. Te ayudo a que puedas generar rutinas sanas con las cuales veras resultados en un corto a mediano plazo. La asesoria es personalizada, lo que nos permite tener un seguimiento mas adecuado y cercano a tus necesidades. Las marcas con las que trabajo estan abaladas a nivel mundial, son de primera calidad como lo que tu piel merece.</p>
 
         </div>
 
