--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <meta name="description" content="Asesoramiento personalizado - Tratamientos de belleza - Rutinas SkinCare">
-    <meta name="keywords" content="COSMETOLOGA, BELLEZA, PIEL, LACA, EXEL, RUTINA, CUIDADO, CALIDAD, MUNDIAL, MARCAS, COSMIATRA">
+    <meta name="keywords" content="COSMETOLOGA, BELLEZA, PIEL, LACA, EXEL, RUTINA, CUIDADO, CALIDAD, MUNDIAL, MARCAS, COSMIATRA, ARGENTINA">
     <meta charset="UTF-8"> <!-- Etiqueta abierta -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -130,15 +130,15 @@
     <section class="section">
         <video id="video" class="section__video" src="./img/video.mp4" controls>VIDEO PRESENTACION</video>
 
-        <div class="section__div">
+        <!-- <div class="section__div"> -->
 
             <p id="parrafo" class="section__divparrafo">Mas de 5 años acompañando el cuidado y belleza de la piel. Te ayudo a que puedas generar rutinas sanas con las cuales veras resultados en un corto a mediano plazo. La asesoria es personalizada, lo que nos permite tener un seguimiento mas adecuado y cercano a tus necesidades. Las marcas con las que trabajo estan abaladas a nivel mundial, son de primera calidad como lo que tu piel merece.</p>
 
-        </div>
+        <!-- </div> -->
 
-        <div class="section__div">
+        <!-- <div class="section__div"> -->
             <img id="banner" class="section__banner" src="./img/agregar.png" alt="MARCAS QUE TRABAJAMOS">
-        </div>
+        <!-- </div> -->
      </section>
 
     
