Se agrega primer banner

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./img/PortadaWeb1.jpg" class="d-block w-100" alt="...">
+                <img src="./img/Banner-01-01.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Productos de calidad</h5>
                   <p>Todos nuestros insumos son de grandes laboratorios como LACA & EXEL.</p>
