Se agregan imagenes al mail

--- a/index.html
+++ b/index.html
@@ -104,25 +104,25 @@
         
         <div class="main__div" data-aos="zoom-in">
             <a href="./vistas/servicio.html">
-                <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL">
+                <img class="main__anchorimg" src="./img/turnos.jpg" alt="TURNOS">
             </a>
         </div>
 
         <div class="main__div" data-aos="zoom-in">
             <a href="./vistas/servicio.html">
-                <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL">
+                <img class="main__anchorimg" src="./img/tratamientos.jpg" alt="TRATAMIENTOS">
             </a>
         </div>
 
         <div class="main__div" data-aos="zoom-in">
             <a href="./vistas/servicio.html">
-                <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL">
+                <img class="main__anchorimg" src="./img/gabinete.jpg" alt="GABINETE">
             </a>
         </div>
 
-        <div class="main__div" data-aos="zoom-in">
+        <!-- <div class="main__div" data-aos="zoom-in">
             <a href="./vistas/servicio.html">
-                <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL">
+                <img class="main__anchorimg" src="./img/agregar.png" alt="DIAGNOSTICO PIEL"> -->
             </a>
         </div>
     </main>
