Se finliza media query de movil pagina inicio

--- a/index.html
+++ b/index.html
@@ -102,12 +102,6 @@
         
         <div class="main__div" data-aos="zoom-in">
             <a href="./vistas/servicio.html">
-                <img class="main__anchorimg" src="./img/turnos.jpg" alt="TURNOS">
-            </a>
-        </div>
-
-        <div class="main__div" data-aos="zoom-in">
-            <a href="./vistas/servicio.html">
                 <img class="main__anchorimg" src="./img/tratamientos.jpg" alt="TRATAMIENTOS">
             </a>
         </div>
@@ -118,6 +112,12 @@
             </a>
         </div>
 
+        <div class="main__div" data-aos="zoom-in">
+          <a href="./belleza/productos.html">
+              <img class="main__anchorimg" src="./img/productos.jpg" alt="GABINETE">
+          </a>
+       </div>
+
     </main>
 
     <section class="section">
@@ -125,7 +125,8 @@
 
             <p id="parrafo" class="section__divparrafo">Mas de 5 años acompañando el cuidado y belleza de la piel. Te ayudo a que puedas generar rutinas sanas con las cuales veras resultados en un corto a mediano plazo. La asesoria es personalizada, lo que nos permite tener un seguimiento mas adecuado y cercano a tus necesidades. Las marcas con las que trabajo estan abaladas a nivel mundial, son de primera calidad como lo que tu piel merece.</p>
 
-            <img id="banner" class="section__banner" src="./img/agregar.png" alt="MARCAS QUE TRABAJAMOS">
+            <img id="banner" class="section__banner" src="./img/marcas.jpg" alt="MARCAS QUE TRABAJAMOS">
+
      </section>
     
     <footer class="footer"> 
