colocan las fotos de protadas de carrusel

--- a/index.html
+++ b/index.html
@@ -66,23 +66,23 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./img/Banner-01-01.jpg" class="d-block w-100" alt="...">
+                <img src="./img/Banner_productos.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Productos de calidad</h5>
+                  <h5>PRODUCTOS DE CALIDAD</h5>
                   <p>Todos nuestros insumos son de grandes laboratorios como LACA & EXEL.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./img/PortadaWeb3.jpg" class="d-block w-100" alt="...">
+                <img src="./img/Banner_gabinete.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Conocimiento certificado</h5>
+                  <h5>CONOCIMIENTO Y CERTIFICADO</h5>
                   <p>Soy cosmetologa y cosmiatra con mas de 5 años con experiencia en el cuidado de la piel</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./img/PortadaWeb1.jpg" class="d-block w-100" alt="...">
+                <img src="./img/Banner_tratamiento.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Aparatologia de primer nivel</h5>
+                  <h5>APARATOLOGIA DE PRIMER NIVEL</h5>
                   <p>Tus tratamientos acompañados de las mejores marcas</p>
                 </div>
               </div>
