Se corrigen media query

--- a/index.html
+++ b/index.html
@@ -101,20 +101,20 @@
     <main class="main">
         
         <div class="main__div" data-aos="zoom-in">
-            <a href="./vistas/servicio.html">
+            <a href="./belleza/servicio.html">
                 <img class="main__anchorimg" src="./img/tratamientos.jpg" alt="TRATAMIENTOS">
             </a>
         </div>
 
         <div class="main__div" data-aos="zoom-in">
-            <a href="./vistas/servicio.html">
+            <a href="./belleza/contacto.html">
                 <img class="main__anchorimg" src="./img/gabinete.jpg" alt="GABINETE">
             </a>
         </div>
 
         <div class="main__div" data-aos="zoom-in">
           <a href="./belleza/productos.html">
-              <img class="main__anchorimg" src="./img/productos.jpg" alt="GABINETE">
+              <img class="main__anchorimg" src="./img/productos.jpg" alt="PRODUCTOS">
           </a>
        </div>
 
