Se realizan los cambios para la seccion servicios

--- a/belleza/servicio.html
+++ b/belleza/servicio.html
@@ -83,11 +83,11 @@
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+              <span class="visually-hidden">Anterior</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+              <span class="visually-hidden">Siguiente</span>
             </button>
           </div>
     </div>
@@ -117,14 +117,14 @@
     <section class="section">
       <video id="video" class="section__video" src="../img/video.mp4" controls>VIDEO RUTINA</video>
 
-          <p id="parrafo" class="section__divparrafo"><strong>RUTINA RECOMENDADA:</strong> Todas las temporadas del año deben estar acompañadas segun sus necesidades. En este video te presentamos un <strong>rutina especial</strong> para tu piel.</p>
+          <p id="parrafo" class="section__divparrafo"><strong>RUTINA RECOMENDADA:</strong> Todas las temporadas del año deben estar acompañadas segun sus necesidades. En este video te presentamos un <strong>rutina especial</strong> para tu piel. Nuestro <strong>principal enfoque</strong> es que puedas implementar esta rutina en tu dia a dia, para que tu piel comience a reflejar los resultados. Comprobalo vos misma!</p>
 
    </section>
 
    <section class="section">
     <video id="video" class="section__video" src="../img/video.mp4" controls>EXPERIENCIA DE CLIENTES</video>
 
-        <p id="parrafo" class="section__divparrafo"><strong>SE PARTE DE NUESTRA COMUNIDAD:</strong> Dia a dia trabajamos para brindarles lo mejor. La satisfaccion de nuestros clientes es lo que mas nos importa, asi como ver sus evoluciones a lo largo de las sesiones.</p>
+        <p id="parrafo" class="section__divparrafo"><strong>SE PARTE DE NUESTRA COMUNIDAD:</strong> Dia a dia trabajamos para brindarles lo mejor. La satisfaccion de nuestros clientes es lo que mas nos importa, asi como ver sus evoluciones a lo largo de las sesiones. Tu testimonio nos importa! Podes escribirnos para compartirlo, enviarnos fotos y videos!</p>
 
  </section>
 
