Se realizan ajustes en servicio

--- a/belleza/servicio.html
+++ b/belleza/servicio.html
@@ -94,19 +94,19 @@
 
     <main class="main">
         
-        <div class="main__div">
+        <div class="main__div" data-aos="zoom-in">
             <a href="../belleza/servicio.html">
                 <img class="main__anchorimg" src="../img/serv_rutina.jpg" alt="RUTINA">
             </a>
         </div>
         
-        <div class="main__div">
+        <div class="main__div" data-aos="zoom-in">
           <a href="../belleza/servicio.html">
               <img class="main__anchorimg" src="../img/serv_acne.jpg" alt="ACNE">
           </a>
         </div>
 
-        <div class="main__div">
+        <div class="main__div" data-aos="zoom-in">
           <a href="../belleza/servicio.html">
               <img class="main__anchorimg" src="../img/serv_arrugas.jpg" alt="ACNE">
           </a>
