--- a/belleza/servicio.html
+++ b/belleza/servicio.html
@@ -6,7 +6,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <meta name="description" content="Asesoramiento personalizado - Tratamientos de belleza - Rutinas SkinCare">
-  <meta name="keywords" content="COSMETOLOGA, BELLEZA, PIEL, LACA, EXEL, RUTINA, CUIDADO, CALIDAD, MUNDIAL, MARCAS, COSMIATRA, ARGENTINA">
+  <meta name="keywords" content="PIEL, RUTINA, TEMPORADA, POROS, PUNTOS, NEGROS, ESPECIAL,ENFOQUE, CLIENTES, RESULTADOS, COMUNIDAD, SESIONES, TESTIMONIO">
   <meta charset="UTF-8"> <!-- Etiqueta abierta -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
