--- a/belleza/equipo.html
+++ b/belleza/equipo.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> <!-- Etiqueta cerrada -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <meta charset="UTF-8"> <!-- Etiqueta abierta -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <meta name="description" content="Asesoramiento personalizado - Tratamientos de belleza - Rutinas SkinCare">
+  <meta name="keywords" content="PIEL, RUTINA, TEMPORADA, POROS, PUNTOS, NEGROS, ESPECIAL,ENFOQUE, CLIENTES, RESULTADOS, COMUNIDAD, SESIONES, TESTIMONIO">
+  <meta charset="UTF-8"> <!-- Etiqueta abierta -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKIN PASSION - Equipo</title>
 
     <!-- ESCRIBO EL LINK CSS-->
@@ -54,50 +56,15 @@
               </div>
             </div>
           </nav>
-
     </header>
 
-    <div class="div container-fluid">
-        <div id="carouselExampleCaptions" class="carousel slide">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="../img/PortadaWeb1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="../img/PortadaWeb3.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="../img/PortadaWeb1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-    </div>
-    
+    <section class="section">
+      <video id="video" class="section__video" src="../img/video.mp4" controls>VIDEO PRESENTACION</video>
+
+          <p id="parrafo" class="section__divparrafo">Mi nombre es <strong>Silvia Monica Paz</strong>, hace mas de 10 años que me dedico a la salud de la piel. Estudie Cosmetologia y Cosmiatria en el Instituto de Laca Laboratorios. Lo que mas me gusta de mi profesion es ver los cambios satisfactorios de mis clientes, ver sus evoluciones y cambios de habitos para con su piel.</p>
+
+   </section>
+
     <footer class="footer"> 
         <a class="footer__logocontenedor" href="../index.html"> <!-- hago la imagen clickeable-->
             <img class="footer__logo" src = "../img/LogoWeb.png" alt = "LOGO DE LA EMPRESA">
