Se finalizan cambios para la entrega

--- a/belleza/servicio.html
+++ b/belleza/servicio.html
@@ -33,11 +33,11 @@
                 <ul class="navbar-nav">
 
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html"><strong>INICIO</strong></a>
+                    <a class="nav-link" aria-current="page" href="../index.html"><strong>INICIO</strong></a>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="../belleza/servicio.html"><strong>SERVICIOS</strong></a>
+                    <a class="nav-link active" href="../belleza/servicio.html"><strong>SERVICIOS</strong></a>
                   </li>
 
                   <li class="nav-item">
