--- a/belleza/equipo.html
+++ b/belleza/equipo.html
@@ -33,7 +33,7 @@
                 <ul class="navbar-nav">
 
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html"><strong>INICIO</strong></a>
+                    <a class="nav-link" aria-current="page" href="../index.html"><strong>INICIO</strong></a>
                   </li>
 
                   <li class="nav-item">
@@ -45,7 +45,7 @@
                   </li>
             
                   <li class="nav-item">
-                    <a class="nav-link" href="../belleza/equipo.html"><strong>EQUIPO</strong></a>
+                    <a class="nav-link active" href="../belleza/equipo.html"><strong>EQUIPO</strong></a>
                   </li>
 
                   <li class="nav-item">
