--- a/belleza/productos.html
+++ b/belleza/productos.html
@@ -33,7 +33,7 @@
                 <ul class="navbar-nav">
 
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html"><strong>INICIO</strong></a>
+                    <a class="nav-link" aria-current="page" href="../index.html"><strong>INICIO</strong></a>
                   </li>
 
                   <li class="nav-item">
@@ -41,7 +41,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="../belleza/productos.html"><strong>PRODUCTOS</strong></a>
+                    <a class="nav-link active" href="../belleza/productos.html"><strong>PRODUCTOS</strong></a>
                   </li>
             
                   <li class="nav-item">
