Se finalizan cambios para la entrega

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <img src="./img/Banner_gabinete.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>CONOCIMIENTO Y CERTIFICADO</h5>
-                  <p>Soy cosmetologa y cosmiatra con mas de 5 años con experiencia en el cuidado de la piel</p>
+                  <p>Soy cosmetologa y cosmiatra con mas de 15 años con experiencia en el cuidado de la piel</p>
                 </div>
               </div>
               <div class="carousel-item">
@@ -123,7 +123,7 @@
     <section class="section">
         <video id="video" class="section__video" src="./img/video.mp4" controls>VIDEO PRESENTACION</video>
 
-            <p id="parrafo" class="section__divparrafo">Mas de 5 años acompañando el cuidado y belleza de la piel. Te ayudo a que puedas generar rutinas sanas con las cuales veras resultados en un corto a mediano plazo. La asesoria es personalizada, lo que nos permite tener un seguimiento mas adecuado y cercano a tus necesidades. Las marcas con las que trabajo estan abaladas a nivel mundial, son de primera calidad como lo que tu piel merece.</p>
+            <p id="parrafo" class="section__divparrafo">Mas de 15 años acompañando el cuidado y belleza de la piel. Te ayudo a que puedas generar rutinas sanas con las cuales veras resultados en un corto a mediano plazo. La asesoria es personalizada, lo que nos permite tener un seguimiento mas adecuado y cercano a tus necesidades. Las marcas con las que trabajo estan avaladas a nivel mundial, son de primera calidad como lo que tu piel merece.</p>
 
             <img id="banner" class="section__banner" src="./img/marcas.jpg" alt="MARCAS QUE TRABAJAMOS">
 
